[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/particles/portal_particle.png" type="Texture" id=1]
[ext_resource path="res://scripts/misc/ManaBits.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="ManaBits" type="RigidBody2D"]
collision_layer = 16
collision_mask = 17
mass = 5.30612
gravity_scale = 9.8
applied_force = Vector2( 1500, 0 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 0.785398
scale = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0, 1, 0.941176, 1 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="DestroyedTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="." groups=["AddMana"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 0.785398
scale = Vector2( 1, 1 )
shape = SubResource( 1 )

[connection signal="timeout" from="DestroyedTimer" to="." method="_on_DestroyedTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
